# who_duck_bot

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.dev/db/docker-entrypoint-initdb.d/: init-who_duck.sh
alembic/: env.py
alembic/versions/: 225d14140630_init.py
app/: container.py  main.py  settings.py  utils.py
app/adapters/: unit_of_work.py
app/adapters/orm/: __init__.py  instrumentation.py  tables.py
app/adapters/repo/: __init__.py  sql_alchemy_repository.py  store_images_repository.py
app/adapters/views/: __init__.py  base_database_view.py  closer_store_images_view.py
app/domain/: __init__.py  errors.py
app/domain/commands/: __init__.py  ai_commands.py  bot_commands.py  command.py  document_commands.py  tg_commands.py  yandex_commands.py
app/domain/events/: __init__.py  event.py
app/domain/models/: __init__.py  entity.py  store_image.py  store_image_vector.py
app/service_layer/: __init__.py  message_bus.py  repositories.py  unit_of_work.py
app/service_layer/handlers/: __init__.py  mapping.py
app/service_layer/handlers/command_handlers/: __init__.py  ai_handlers.py  bot_command_handlers.py  document_handlers.py  tg_command_handlers.py  yandex_command_handlers.py
app/telegram/: __init__.py  main.py  polling.py
app/yandex_disk/: __init__.py  yandex_storage.py
