[project]
name = "who_duck_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vlad Boiko", email = "acc.v.boiko@gmail.com"},
]
dependencies = [
    "aiogram>=3.14.0",
    "httpx>=0.27.2",
    "aiofiles>=24.1.0",
    "yadisk>=3.1.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "dependency-injector>=4.43.0",
    "tenacity>=9.0.0",
    "pika>=1.3.2",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "openai>=1.55.3",
    "pillow>=11.0.0",
    "pillow-heif>=0.21.0",
    "alembic>=1.14.0",
    "pytest>=8.3.4",
    "pgvector>=0.3.6",
    "python-dotenv[cli]>=1.0.1",
    "redis>=5.2.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
